--- a/Resources/pl.lproj/Localizable.strings
+++ b/Resources/pl.lproj/Localizable.strings
@@ -65,3 +65,16 @@
 
 /* Accessibility label for export button */
 "toolbar.export_label" = "Eksportuj obraz";
+
+// MARK: - Rating Request
+/* Title of the satisfaction alert dialog */
+"rating_satisfaction_title" = "Czy jesteś zadowolony z BlurFace?";
+
+/* Message asking for user feedback in the satisfaction alert */
+"rating_satisfaction_message" = "Pomóż nam ulepszyć aplikację!";
+
+/* Positive response button in satisfaction alert */
+"rating_satisfaction_yes" = "Tak";
+
+/* Negative response button in satisfaction alert */
+"rating_satisfaction_no" = "Nie";
