--- a/Resources/ja.lproj/Localizable.strings
+++ b/Resources/ja.lproj/Localizable.strings
@@ -65,3 +65,16 @@
 
 /* Accessibility label for export button */
 "toolbar.export_label" = "画像をエクスポート";
+
+// MARK: - Rating Request
+/* Title of the satisfaction alert dialog */
+"rating_satisfaction_title" = "BlurFaceにご満足いただけましたか？";
+
+/* Message asking for user feedback in the satisfaction alert */
+"rating_satisfaction_message" = "アプリの改善にご協力ください！";
+
+/* Positive response button in satisfaction alert */
+"rating_satisfaction_yes" = "はい";
+
+/* Negative response button in satisfaction alert */
+"rating_satisfaction_no" = "いいえ";
